--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
   <head>
     <title></title>
     <style type="text/css">
+      body {
+        background-color: #384052;
+      }
       .container {
         width: 512px;
         height: 512px;
         margin: 100px auto;
+        border: 4px solid #ccc;
       }
     </style>
   </head>
