--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title></title>
+    <script type="text/javascript" src="3rdparty/gl-matrix-min.js"></script>
     <style type="text/css">
       body {
         background-color: #384052;
