--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title></title>
     <script type="text/javascript" src="3rdparty/gl-matrix-min.js"></script>
+    <script type="text/javascript" src="3rdparty/Base.js"></script>
     <style type="text/css">
       body {
         background-color: #384052;
